# xritlib

./: .gitignore  CMakeLists.txt  README.md
include/: AEC.h  FileParser.h  Header.h  ImageHandler.h  MSDU.h  NOAAProduct.h  NOAASubproduct.h  Presets.h  TextHandler.h  Tools.h  lib.h
include/headers/: AncillaryHeader.h  AnnotationHeader.h  DCSFilenameHeader.h  HeaderStructuredHeader.h  ImageDataFunctionHeader.h  ImageNavigationHeader.h  ImageStructureHeader.h  NOAASpecificHeader.h  PrimaryHeader.h  RiceCompressionHeader.h  SegmentIdentificationHeader.h  TimestampHeader.h  XRITBaseHeader.h
include/types/: CompressionType.h  FileTypeCode.h  HeaderType.h  NOAAProductID.h  ScannerSubProduct.h  SequenceType.h
src/: AEC.cpp  FileParser.cpp  ImageHandler.cpp  MSDU.cpp  TextHandler.cpp  Tools.cpp
